--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name"         : "node-red-contrib-owfs",
-    "version"      : "1.2.0",
+    "name"         : "node-red-contrib-owfs-context",
+    "version"      : "1.0.0",
     "description"  : "OWFS (1-wire) support for Node-RED",
-    "homepage"     : "http://github.com/njh/node-red-contrib-owfs",
+    "homepage"     : "http://github.com/mmquadrat/node-red-contrib-owfs-context",
     "license"      : "Apache-2.0",
     "repository"   : {
         "type":"git",
-        "url":"https://github.com/njh/node-red-contrib-owfs.git"
+        "url":"https://github.com/mmquadrat/node-red-contrib-owfs-context.git"
     },
     "dependencies": {
         "owfs": "~0.4.0",
@@ -15,14 +15,14 @@
     "keywords": [ "1-wire", "owfs", "node-red", "owserver", "DS18B20", "DS18S20" ],
     "node-red": {
         "nodes": {
-            "owfs": "owfs.js"
+            "owfs_func": "owfs.js"
         }
     },
     "bugs": {
-        "url": "https://github.com/njh/node-red-contrib-owfs/issues"
+        "url": "https://github.com/mmquadrat/node-red-contrib-owfs-context/issues"
     },
     "author": {
-        "name": "Nicholas Humfrey",
-        "url": "http://njh.me/"
+        "name": "Michael Mueller",
+        "url": ""
     }
 }
